优化：使用Java 8语法，从数据库获取Agent角色