@@ -15,9 +15,11 @@ public class AgentOrchestrator {
 
     private final Map<String, RoleBasedAgent> agents;
     private final ProjectStateRepository stateRepository;
+    private final AgentRepository agentRepository;
 
-    public AgentOrchestrator(ProjectStateRepository stateRepository) {
+    public AgentOrchestrator(ProjectStateRepository stateRepository, AgentRepository agentRepository) {
         this.stateRepository = stateRepository;
+        this.agentRepository = agentRepository;
         this.agents = new ConcurrentHashMap<>();
         initializeAgents();
     }
@@ -26,18 +28,19 @@ public class AgentOrchestrator {
      * 初始化所有角色代理
      */
     private void initializeAgents() {
-        agents.put("后端", new BackendAgent());
-        agents.put("前端", new FrontendAgent());
-        agents.put("测试", new TestingAgent());
-        agents.put("架构设计", new ArchitectureAgent());
+        // 从数据库加载所有可用的代理
+        List<Agent> availableAgents = agentRepository.findAll();
+        for (Agent agent : availableAgents) {
+            agents.put(agent.getRoleName(), agent.getAgentInstance());
+        }
     }
 
     /**
      * 执行项目计划
      */
     public void executeProject(ProjectPlan projectPlan) {
-        ProjectState state = new ProjectState(projectPlan.projectId());
-        projectPlan.tasks().forEach(state::addTask);
+        ProjectState state = new ProjectState(projectPlan.getProjectId());
+        projectPlan.getTasks().forEach(state::addTask);
 
         // 保存初始状态
         state.saveToDatabase();
@@ -59,9 +62,9 @@ public class AgentOrchestrator {
             hasChanges = false;
 
             // 获取所有待执行的任务
-            List<Task> executableTasks = projectPlan.tasks().stream()
-                .filter(task -> state.canExecuteTask(task.id()))
-                .filter(task -> state.getTaskStatus(task.id()) == Task.TaskStatus.PENDING)
+            List<Task> executableTasks = projectPlan.getTasks().stream()
+                .filter(task -> state.canExecuteTask(task.getId()))
+                .filter(task -> state.getTaskStatus(task.getId()) == Task.TaskStatus.PENDING)
                 .collect(Collectors.toList());
 
             // 执行可执行的任务
@@ -88,12 +91,12 @@ public class AgentOrchestrator {
      */
     private boolean executeTask(Task task, ProjectState state) {
         try {
-            state.updateTaskStatus(task.id(), Task.TaskStatus.RUNNING);
+            state.updateTaskStatus(task.getId(), Task.TaskStatus.RUNNING);
 
             // 获取对应的代理
-            RoleBasedAgent agent = agents.get(task.role());
+            RoleBasedAgent agent = agents.get(task.getRole());
             if (agent == null) {
-                throw new OrchestratorException("Unknown agent role: " + task.role());
+                throw new OrchestratorException("Unknown agent role: " + task.getRole());
             }
 
             // 执行任务
@@ -101,10 +104,10 @@ public class AgentOrchestrator {
 
             if (success) {
                 state.updateTask(task.complete());
-                System.out.println("Task completed: " + task.id() + " (" + task.role() + ")");
+                System.out.println("Task completed: " + task.getId() + " (" + task.getRole() + ")");
                 return true;
             } else {
-                throw new AgentExecutionException("Agent execution failed: " + task.id());
+                throw new AgentExecutionException("Agent execution failed: " + task.getId());
             }
 
         } catch (AgentExecutionException e) {
@@ -120,20 +123,20 @@ public class AgentOrchestrator {
      * 处理任务失败
      */
     private void handleTaskFailure(Task task, ProjectState state) {
-        int currentRetryCount = state.getRetryCount(task.id());
+        int currentRetryCount = state.getRetryCount(task.getId());
         int maxRetries = 3; // 最大重试次数
 
         if (currentRetryCount < maxRetries) {
             // 重试任务
-            state.incrementRetryCount(task.id());
+            state.incrementRetryCount(task.getId());
             Task retriedTask = task.retry();
             state.updateTask(retriedTask);
-            System.out.println("Task retrying: " + task.id() + " (attempt " + (currentRetryCount + 1) + ")");
+            System.out.println("Task retrying: " + task.getId() + " (attempt " + (currentRetryCount + 1) + ")");
         } else {
             // 超过最大重试次数，标记为失败
             state.updateTask(task.fail());
-            state.updateTaskStatus(task.id(), Task.TaskStatus.FAILED);
-            System.out.println("Task failed after max retries: " + task.id());
+            state.updateTaskStatus(task.getId(), Task.TaskStatus.FAILED);
+            System.out.println("Task failed after max retries: " + task.getId());
         }
     }
 
@@ -143,12 +146,12 @@ public class AgentOrchestrator {
     private boolean tryRetryFailedTasks(ProjectPlan projectPlan, ProjectState state) {
         boolean hasChanges = false;
 
-        List<Task> failedTasks = projectPlan.tasks().stream()
-            .filter(task -> state.getTaskStatus(task.id()) == Task.TaskStatus.FAILED)
+        List<Task> failedTasks = projectPlan.getTasks().stream()
+            .filter(task -> state.getTaskStatus(task.getId()) == Task.TaskStatus.FAILED)
             .collect(Collectors.toList());
 
         for (Task failedTask : failedTasks) {
-            if (state.getRetryCount(failedTask.id()) < 3) {
+            if (state.getRetryCount(failedTask.getId()) < 3) {
                 if (executeTask(failedTask, state)) {
                     hasChanges = true;
                 }
@@ -171,7 +174,7 @@ public class AgentOrchestrator {
             state.getProjectId(),
             "Resumed Project",
             "Resumed execution",
-            state.getTaskMap().values().stream().toList(),
+            state.getTaskMap().values().stream().collect(Collectors.toList()),
             LocalDateTime.now(),
             LocalDateTime.now()
         );
